Update- Gửi mail khi gv sử dụng lại bt

--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -2849,6 +2849,14 @@
 														</select>
 													</div>
 													<div class="reuse-group">
+														<label for="newshowMode">Chế độ hiển thị:</label>
+														<select name="newshowMode">
+															<option value="All">Tất cả mọi người</option>
+															<option value="Chan">Sinh viên có mã số chẵn (4 số cuối)</option>
+															<option value="Le">Sinh viên có mã số lẻ (4 số cuối)</option>
+														</select>
+													</div>
+													<div class="reuse-group">
 														<label for="newmaxSize">Dung lượng tối đa:</label>
 													<input type="number" name="MaxSize" id="maxSize" class="form-control" value="@assignment.MaxSize" placeholder="Dung lượng tối đa cho phép nộp (MB)" />
 													</div>
