--- a/DoAnMon/Views/ClassRooms/GetAllBTStu.cshtml
+++ b/DoAnMon/Views/ClassRooms/GetAllBTStu.cshtml
@@ -85,7 +85,7 @@
 
 					</td>
 					<td>
-						<a href="/BAINOP/@item.Urlbainop" download>@item.Urlbainop</a>
+						<a href="/Uploads/BAINOP/@item.Urlbainop" download>@item.Urlbainop</a>
 					</td>
 					<td>
 						<span id="displayLabel_@item.IdBaiNop">@item.Diem</span>
