Thay đỗi logo web và cập nhật lại tài khoản admin

--- a/DoAnMon/Areas/Admin/Views/Home/TrangChu.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/TrangChu.cshtml
@@ -337,7 +337,7 @@
 <div class="admin-container">
     <div class="left-container_admin">
         <a href="/">
-            <img src="https://media.loveitopcdn.com/3807/logo-hutech-1.png"
+            <img src="~/images/Logo_Web_Landscape_With_No_Border.png"
              alt="HUTECH"
              width="100%"
              height="auto" />
