Thay đổi logo cho create và thêm upload hình anh cho leave request

--- a/DoAnMon/Views/ClassRooms/Create.cshtml
+++ b/DoAnMon/Views/ClassRooms/Create.cshtml
@@ -38,7 +38,7 @@
 	<!-- Navbar -->
 	<nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #7BD3EA;padding: 0 5;">
 		<a asp-controller="ClassRooms" asp-action="Index" class="navbar-brand" style="font-family: 'Roboto Slab', sans-serif; padding: 0;">
-			<img style="padding: 0;" src="~/images/xanh.png" alt="Logo" width="70" height="auto" />
+			<img style="padding: 0;" src="~/images/Logo_Web_Landscape_With_No_Border.png" alt="Logo" width="220px" height="auto" />
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
